# Aegis-CLI

./: .env.example  .gitignore  FULL_TRACE_LOGGING.md  HTML_REFERENCE_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_VERIFICATION.md  LOGGING_FEATURE_DEMO.md  MCP_INTEGRATION.md  README.md  SEMANTIC_VERIFICATION_IMPLEMENTATION.md  TOOLS_AND_TESTS_SUMMARY.md  VERIFICATION_STRATEGY.md  mcp_config.json  pyproject.toml
aegis/: __init__.py  main.py
aegis/agents/: __init__.py  base.py  coder.py  critic.py  janitor.py  orchestrator.py  tester.py
aegis/core/: __init__.py  code_verifier.py  feedback.py  llm_config.py  llm_logger.py  llm_response_parser.py  logging.py  mcp_client.py  state.py  tool_bridge.py  verification.py  workspace.py
aegis/tools/: __init__.py  (+8 more)
docs/: LLM_CONFIGURATION.md  TOOL_DEVELOPMENT.md  TOOL_USAGE.md
examples/: mcp_demo.py  mcp_example.py  sample_prompts.md  tutorial.md
tests/: __init__.py  test_agents_base.py  test_base_agent_mcp.py  test_cli_e2e.py  test_code_verifier.py  test_context_integration.py  test_feedback.py  test_filesystem_integration.py  test_git_tool.py  test_html_reference_fix.py  test_llm_config.py  test_llm_integration.py  test_llm_logger.py  test_llm_response_parser.py  test_mcp_client.py  test_multi_language_generation.py  test_python_tool.py  test_registry.py  test_semantic_verification_enhancements.py  test_semantic_verification_integration.py  test_shell_integration.py  test_task_execution.py  test_testing_tool.py  test_tool_bridge.py  test_tools.py  test_verification_integration.py  test_workspace.py
